--- a/1.html
+++ b/1.html
@@ -1,5 +1,26 @@
-<h4><strong>hello <u>web</u></strong></h4>
+<!doctype html>
+<html>
+<head>
+  <title>WEB1 - HTML</title>
+  <meta charset = "utf-8">
+</head>
+<body>
+  <h1><a href="index.html">WEB</a></h1>
+  <ol>
+    <li><a href="1.html">html</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
+<h1>HTML</h1>
+<p>Hypertext Markup Language (HTML) is the standard markup language for
+<strong>creating <u>web</u> pages</strong> and web applications. Web
+browsers receive HTML documents from a web server or from local storge
+and render them into multimedia web pages. HTML describes the structure
+of a wev page semantically and originally included cues for the appearance
+of the document.
+<img src="coding.jpg" width="30%">
 <p style="margin-top:20px;">sffasffasfasfddddddddddddddddddd
 dffffffffffffffffffffffffffffffffffffff
 dfffffffffffff
-<img src="coding.jpg" width="80%">
+</body>
+</html>
